--- a/index.html
+++ b/index.html
@@ -328,5 +328,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
     // Boot: start in story mode with intro
     showStory(); story.i=0; playNode(story.nodes[story.i]); reset(true);
     updateUI();
-  </script></body>
+  </script>
+<audio id="bgm" src="bgm.mp3" loop preload="auto"></audio>
+</body>
 </html>
