--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="th">
+<!DOCTYPE html><html lang="th">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,61 +12,60 @@
     .app{max-width:980px;margin:0 auto;display:grid;gap:16px}
     .topbar{display:flex;align-items:center;justify-content:space-between}
     h1{margin:0;font-size:22px}
-    .pill{padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.1);background:rgba(255,255,255,.04);color:var(--muted);font-size:13px}
+    .pill{padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.1);background:rgba(255,255,255,.04);color:var(--muted);font-size:13px}.arena{position:relative;background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;min-height:300px;overflow:hidden}
+.ground{position:absolute;left:0;right:0;bottom:22px;height:6px;background:linear-gradient(90deg,rgba(56,189,248,.25),rgba(250,204,21,.25));filter:blur(1px)}
 
-    .arena{position:relative;background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,.01));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;min-height:300px;overflow:hidden}
-    .ground{position:absolute;left:0;right:0;bottom:22px;height:6px;background:linear-gradient(90deg,rgba(56,189,248,.25),rgba(250,204,21,.25));filter:blur(1px)}
+.slot{position:absolute;bottom:28px;width:40%;display:flex;flex-direction:column;gap:8px}
+.slot.left{left:16px;align-items:flex-start}
+.slot.right{right:16px;align-items:flex-end}
 
-    .slot{position:absolute;bottom:28px;width:40%;display:flex;flex-direction:column;gap:8px}
-    .slot.left{left:16px;align-items:flex-start}
-    .slot.right{right:16px;align-items:flex-end}
+.nameplate{display:flex;gap:8px;align-items:center}
 
-    .nameplate{display:flex;gap:8px;align-items:center}
+/* HP gauge with chip (damage delay) */
+.hpbar{position:relative;width:100%;height:14px;background:#1f2937;border-radius:10px;border:1px solid rgba(255,255,255,.08);overflow:hidden}
+.hpbar .chip{position:absolute;left:0;top:0;bottom:0;width:100%;background:linear-gradient(90deg,#94a3b8,#ef4444);opacity:.45;transition:width .7s ease}
+.hpbar .fill{position:absolute;left:0;top:0;bottom:0;width:100%;background:linear-gradient(90deg,var(--ok),var(--warn),var(--danger));transition:width .35s ease}
+.hpnum{font-size:13px;color:var(--muted)}
 
-    /* HP gauge with chip (damage delay) */
-    .hpbar{position:relative;width:100%;height:14px;background:#1f2937;border-radius:10px;border:1px solid rgba(255,255,255,.08);overflow:hidden}
-    .hpbar .chip{position:absolute;left:0;top:0;bottom:0;width:100%;background:linear-gradient(90deg,#94a3b8,#ef4444);opacity:.45;transition:width .7s ease}
-    .hpbar .fill{position:absolute;left:0;top:0;bottom:0;width:100%;background:linear-gradient(90deg,var(--ok),var(--warn),var(--danger));transition:width .35s ease}
-    .hpnum{font-size:13px;color:var(--muted)}
+.spriteWrap{position:relative;display:inline-block;padding:8px 12px;border-radius:12px;background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08)}
+.sprite{width:min(260px,34vw);height:auto;max-height:220px;object-fit:contain;image-rendering:auto}
+.right .sprite{transform:scaleX(-1)}
 
-    .spriteWrap{position:relative;display:inline-block;padding:8px 12px;border-radius:12px;background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08)}
-    .sprite{width:min(260px,34vw);height:auto;max-height:220px;object-fit:contain;image-rendering:auto}
-    .right .sprite{transform:scaleX(-1)}
+.panel{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px}
 
-    .panel{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px}
+.btns{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:8px}
+button{padding:10px 12px;border-radius:12px;background:#0f172a;color:var(--text);border:1px solid rgba(255,255,255,.12);cursor:pointer;transition:border-color .2s ease, box-shadow .2s ease}
+button:hover{border-color:var(--accent)}
+button:disabled{opacity:.5;cursor:not-allowed}
+.focused{outline:none;box-shadow:0 0 0 3px rgba(56,189,248,.45)}
 
-    .btns{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:8px}
-    button{padding:10px 12px;border-radius:12px;background:#0f172a;color:var(--text);border:1px solid rgba(255,255,255,.12);cursor:pointer;transition:border-color .2s ease, box-shadow .2s ease}
-    button:hover{border-color:var(--accent)}
-    button:disabled{opacity:.5;cursor:not-allowed}
-    .focused{outline:none;box-shadow:0 0 0 3px rgba(56,189,248,.45)}
+.log{max-height:220px;overflow:auto;font-size:14px}
+.log p{margin:6px 0}
+.footer{display:flex;justify-content:flex-end}
 
-    .log{max-height:220px;overflow:auto;font-size:14px}
-    .log p{margin:6px 0}
-    .footer{display:flex;justify-content:flex-end}
+/* Effects */
+@keyframes hit{10%{transform:translateX(-4px)} 20%{transform:translateX(4px)} 30%{transform:translateX(-3px)} 40%{transform:translateX(3px)} 50%{transform:translateX(-2px)} 60%{transform:translateX(2px)} 100%{transform:none}}
+.shake{animation:hit .35s ease}
+.guard{box-shadow:0 0 0 0 rgba(59,130,246,.6);animation:pulse .6s ease}
+@keyframes pulse{to{box-shadow:0 0 16px 6px rgba(59,130,246,.35)}}
 
-    /* Effects */
-    @keyframes hit{10%{transform:translateX(-4px)} 20%{transform:translateX(4px)} 30%{transform:translateX(-3px)} 40%{transform:translateX(3px)} 50%{transform:translateX(-2px)} 60%{transform:translateX(2px)} 100%{transform:none}}
-    .shake{animation:hit .35s ease}
-    .guard{box-shadow:0 0 0 0 rgba(59,130,246,.6);animation:pulse .6s ease}
-    @keyframes pulse{to{box-shadow:0 0 16px 6px rgba(59,130,246,.35)}}
+/* Floating damage number */
+.floatNum{position:absolute;left:50%;transform:translateX(-50%);top:-8px;font-weight:700;text-shadow:0 2px 8px rgba(0,0,0,.5)}
+.dmg{color:#fecaca}
+.heal{color:#bbf7d0}
+@keyframes floatUp{0%{opacity:0;transform:translate(-50%,8px)}20%{opacity:1}100%{opacity:0;transform:translate(-50%,-24px)}}
+.floatAnim{animation:floatUp .7s ease forwards}
 
-    /* Floating damage number */
-    .floatNum{position:absolute;left:50%;transform:translateX(-50%);top:-8px;font-weight:700;text-shadow:0 2px 8px rgba(0,0,0,.5)}
-    .dmg{color:#fecaca}
-    .heal{color:#bbf7d0}
-    @keyframes floatUp{0%{opacity:0;transform:translate(-50%,8px)}20%{opacity:1}100%{opacity:0;transform:translate(-50%,-24px)}}
-    .floatAnim{animation:floatUp .7s ease forwards}
+/* Help overlay */
+.help{position:fixed;inset:auto 16px 16px auto;max-width:320px;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.12);background:rgba(15,23,42,.85);backdrop-filter:blur(6px);font-size:13px;color:#d1d5db}
+.help kbd{font-family:ui-monospace,Menlo,monospace;font-size:12px;padding:1px 6px;border-radius:6px;border:1px solid rgba(255,255,255,.2);background:rgba(255,255,255,.06)}
+.help.hidden{display:none}
 
-    /* Help overlay */
-    .help{position:fixed;inset:auto 16px 16px auto;max-width:320px;padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.12);background:rgba(15,23,42,.85);backdrop-filter:blur(6px);font-size:13px;color:#d1d5db}
-    .help kbd{font-family:ui-monospace,Menlo,monospace;font-size:12px;padding:1px 6px;border-radius:6px;border:1px solid rgba(255,255,255,.2);background:rgba(255,255,255,.06)}
-    .help.hidden{display:none}
+@media (max-width:760px){
+  .slot{width:48%}
+  .btns{grid-template-columns:1fr}
+}
 
-    @media (max-width:760px){
-      .slot{width:48%}
-      .btns{grid-template-columns:1fr}
-    }
   </style>
 </head>
 <body>
@@ -75,76 +73,72 @@
     <div class="topbar">
       <h1>Turn‑Based Beta (PNG)</h1>
       <span id="turnTag" class="pill">กำลังโหลด…</span>
-    </div>
-
-    <!-- STORY LAYER -->
-    <section id="storyLayer" class="panel" style="position:relative; overflow:hidden;">
-      <div id="storyBox" style="display:none; position:relative; border-radius:16px; padding:16px; background:rgba(15,23,42,.85); border:1px solid rgba(255,255,255,.12);">
-        <div style="display:flex; gap:12px; align-items:flex-start;">
-          <img id="storyPortrait" src="Player.png" alt="portrait" style="width:72px; height:72px; object-fit:contain; image-rendering:auto; border-radius:12px; background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.1)" />
-          <div style="flex:1; min-height:72px;">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:6px;">
-              <strong id="storySpeaker">Player</strong>
-              <div style="display:flex; gap:8px; opacity:.9;">
-                <button id="storySkip" class="pill" title="ข้ามเนื้อเรื่อง">ข้าม</button>
-              </div>
-            </div>
-            <div id="storyText" style="min-height:48px; line-height:1.6"></div>
-            <div id="storyChoices" style="display:none; margin-top:10px; gap:8px; flex-wrap:wrap"></div>
-            <div style="display:flex; justify-content:flex-end; margin-top:10px;">
-              <button id="storyNext" class="pill">ถัดไป (Space/N)</button>
-            </div>
+    </div><!-- STORY LAYER -->
+<section id="storyLayer" class="panel" style="position:relative; overflow:hidden;">
+  <div id="storyBox" style="display:none; position:relative; border-radius:16px; padding:16px; background:rgba(15,23,42,.85); border:1px solid rgba(255,255,255,.12);">
+    <div style="display:flex; gap:12px; align-items:flex-start;">
+      <img id="storyPortrait" src="Player.png" alt="portrait" style="width:72px; height:72px; object-fit:contain; image-rendering:auto; border-radius:12px; background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.1)" />
+      <div style="flex:1; min-height:72px;">
+        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:6px;">
+          <strong id="storySpeaker">Player</strong>
+          <div style="display:flex; gap:8px; opacity:.9;">
+            <button id="storySkip" class="pill" title="ข้ามเนื้อเรื่อง">ข้าม</button>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Battle Arena with PNG sprites -->
-    <section class="arena" aria-label="สนามต่อสู้">
-      <div class="ground"></div>
-
-      <!-- Player (LEFT) -->
-      <div class="slot left" id="playerSlot">
-        <div class="nameplate"><strong id="pName">Player</strong><span class="hpnum" id="pHPText">100 / 100 HP</span></div>
-        <div class="hpbar" aria-label="Player HP">
-          <div id="pHPChip" class="chip" style="width:100%"></div>
-          <div id="pHPBar" class="fill" style="width:100%"></div>
-        </div>
-        <div class="spriteWrap" id="pSpriteWrap">
-          <img id="playerImg" class="sprite" src="Player.png" alt="Player" />
+        <div id="storyText" style="min-height:48px; line-height:1.6"></div>
+        <div id="storyChoices" style="display:none; margin-top:10px; gap:8px; flex-wrap:wrap"></div>
+        <div style="display:flex; justify-content:flex-end; margin-top:10px;">
+          <button id="storyNext" class="pill">ถัดไป (Space/N)</button>
         </div>
       </div>
+    </div>
+  </div>
+</section>
 
-      <!-- Monster (RIGHT) -->
-      <div class="slot right" id="enemySlot">
-        <div class="nameplate" style="justify-content:flex-end"><span class="hpnum" id="eHPText">100 / 100 HP</span><strong id="eName">Monster</strong></div>
-        <div class="hpbar" aria-label="Enemy HP">
-          <div id="eHPChip" class="chip" style="width:100%"></div>
-          <div id="eHPBar" class="fill" style="width:100%"></div>
-        </div>
-        <div class="spriteWrap" id="eSpriteWrap">
-          <img id="enemyImg" class="sprite" src="Monster.png" alt="Monster" />
-        </div>
-      </div>
-    </section>
+<!-- Battle Arena with PNG sprites -->
+<section class="arena" aria-label="สนามต่อสู้">
+  <div class="ground"></div>
 
-    <!-- Controls & Log -->
-    <section class="panel">
-      <div class="btns">
-        <button id="btnAttack">โจมตี <span style="opacity:.6">(A / ←→ + Enter)</span></button>
-        <button id="btnDefend">ป้องกัน <span style="opacity:.6">(D)</span></button>
-        <button id="btnSkill">สกิล: ไฟร์บอล <span style="opacity:.6">(S)</span></button>
-      </div>
-      <div class="log" id="log" role="log" aria-live="polite"></div>
-      <div class="footer">
-        <button id="btnNew">เริ่มเกมใหม่ (R)</button>
-        <button id="btnBGM">🔇 ปิดเพลง</button>
-      </div>
-    </section>
+  <!-- Player (LEFT) -->
+  <div class="slot left" id="playerSlot">
+    <div class="nameplate"><strong id="pName">Player</strong><span class="hpnum" id="pHPText">100 / 100 HP</span></div>
+    <div class="hpbar" aria-label="Player HP">
+      <div id="pHPChip" class="chip" style="width:100%"></div>
+      <div id="pHPBar" class="fill" style="width:100%"></div>
+    </div>
+    <div class="spriteWrap" id="pSpriteWrap">
+      <img id="playerImg" class="sprite" src="Player.png" alt="Player" />
+    </div>
   </div>
 
-  <!-- BGM (background music) -->
-  <audio id="bgm" src="bgm.mp3" loop preload="auto"></audio>
+  <!-- Monster (RIGHT) -->
+  <div class="slot right" id="enemySlot">
+    <div class="nameplate" style="justify-content:flex-end"><span class="hpnum" id="eHPText">100 / 100 HP</span><strong id="eName">Monster</strong></div>
+    <div class="hpbar" aria-label="Enemy HP">
+      <div id="eHPChip" class="chip" style="width:100%"></div>
+      <div id="eHPBar" class="fill" style="width:100%"></div>
+    </div>
+    <div class="spriteWrap" id="eSpriteWrap">
+      <img id="enemyImg" class="sprite" src="Monster.png" alt="Monster" />
+    </div>
+  </div>
+</section>
+
+<!-- Controls & Log -->
+<section class="panel">
+  <div class="btns">
+    <button id="btnAttack">โจมตี <span style="opacity:.6">(A / ←→ + Enter)</span></button>
+    <button id="btnDefend">ป้องกัน <span style="opacity:.6">(D)</span></button>
+    <button id="btnSkill">สกิล: ไฟร์บอล <span style="opacity:.6">(S)</span></button>
+  </div>
+  <div class="log" id="log" role="log" aria-live="polite"></div>
+  <div class="footer">
+    <button id="btnNew">เริ่มเกมใหม่ (R)</button>
+    <button id="btnBGM">🔇 ปิดเพลง</button>
+  </div>
+</section>
+
+  </div>  <!-- BGM (background music) — เปลี่ยนชื่อไฟล์ได้ที่ src ด้านล่าง --><audio id="bgm" src="bgm.mp3" loop preload="auto" playsinline></audio></audio>
 
   <script>
     // --- Utilities ---
@@ -317,7 +311,7 @@
         if(isKey(e,['Escape'])){ storyUI.skip.click(); e.preventDefault(); return; }
         return;
       }
-
+  
       if(isKey(e,['r','R'])){ reset(); e.preventDefault(); return; }
       const actionable = game.state==='player-turn';
       if(actionable && isKey(e,['a','A'])){ ui.btnA.click(); e.preventDefault(); return; }
@@ -329,11 +323,33 @@
     });
 
     // BGM toggle
-    ui.btnBGM.addEventListener('click',()=>{ const bgm=document.getElementById('bgm'); if(bgm.paused){ bgm.play(); ui.btnBGM.textContent='🔇 ปิดเพลง'; } else { bgm.pause(); ui.btnBGM.textContent='🔊 เปิดเพลง'; }});
+    ui.btnBGM.addEventListener('click',()=>{
+      const bgm=document.getElementById('bgm');
+      bgm.muted=false; // เผื่อเคยโดน mute ไว้
+      if(bgm.paused){
+        bgm.volume = 0.5;
+        bgm.play().catch(()=>{});
+        ui.btnBGM.textContent='🔇 ปิดเพลง';
+      } else {
+        bgm.pause();
+        ui.btnBGM.textContent='🔊 เปิดเพลง';
+      }
+    });
+
+    // แจ้งเตือนถ้าโหลดไฟล์ bgm.mp3 ไม่สำเร็จ
+    (function(){
+      const bgm=document.getElementById('bgm');
+      bgm.addEventListener('error',()=>{
+        const box=document.createElement('div');
+        box.textContent='ไม่พบไฟล์ BGM: bgm.mp3 — วางไฟล์ชื่อ "bgm.mp3" ไว้โฟลเดอร์เดียวกับ index.html หรือแก้ src ให้ตรง';
+        box.style.cssText='position:fixed;left:16px;bottom:16px;padding:8px 12px;border-radius:10px;background:rgba(239,68,68,.12);border:1px solid rgba(239,68,68,.4);color:#fecaca;font-size:12px;z-index:1000;backdrop-filter:blur(4px)';
+        document.body.appendChild(box);
+        console.error('โหลด BGM ไม่สำเร็จ: ตรวจชื่อ/ตำแหน่งไฟล์ bgm.mp3');
+      });
+    })();
 
     // Boot: start in story mode with intro
     showStory(); story.i=0; playNode(story.nodes[story.i]); reset(true);
     updateUI();
-  </script>
-</body>
-</html>
+  </script></body>
+        </html>
