--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
   </div>
 
   <!-- BGM (background music) -->
-  <audio id="bgm" src="bgm.mp3" loop preload="auto"></audio>
+  <audio id="bgm" src="bgm.mp3" loop preload="auto">
+     <source src="bgm.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
     // --- Utilities ---
