--- a/index.html
+++ b/index.html
@@ -138,13 +138,12 @@
       <div class="log" id="log" role="log" aria-live="polite"></div>
       <div class="footer">
         <button id="btnNew">เริ่มเกมใหม่ (R)</button>
-        <button id="btnBGM">🔇 ปิดเพลง</button>
       </div>
     </section>
   </div>
 
   <!-- BGM (background music) -->
-  <audio id="bgm" src="bgm.mp3" loop preload="auto">
+  <audio control>
      <source src="bgm.mp3" type="audio/mpeg">
   </audio>
 
