--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
   </div>
 
   <!-- BGM (background music) -->
-  <audio control>
-     <source src="bgm.mp3" type="audio/mpeg">
+  <audio autoplay loop>
+     <source src="bgm.flac" type="audio/mpeg">
   </audio>
 
   <script>
