--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <!-- BGM (background music) -->
   <audio autoplay loop>
-     <source src="bgm.m4a" type="audio/mpeg">
+     <source src="bgm.m4a">
   </audio>
 
   <script>
